--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:312b13f3bf0bb82ff07f5facdfed6e88e3ac1586494ff27edb5f9b055c8417c1"
+  "signature": "sha256:5fe1ef62b5e378398919902f3c658f249e45363301f5459493e9f26b0e5bdb34"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -312,39 +312,73 @@
       "to produce all the putters you want to sell per year at a unit cost of \\$135. \n",
       "There is no increased working capital need due to this new technology, and no \n",
       "value of the machine/technology after 10 years. What is the NPV of investing in \n",
-      "the new technology? Ignore taxes and assume a discount rate of 9%. (Hint: Think \n",
-      "incrementally; the difference between the world without and with this new \n",
-      "technology! Also, ignoring taxes will be a big help if you think right.) "
+      "the new technology? Ignore taxes and assume a discount rate of 9%. "
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "r      = 0.09       # 9%/yr discount rate\n",
-      "life   = 10         # project lifetime\n",
-      "qty_yr = 1000       # the qty sold last year\n",
-      "qty_gr = 0.12       # 12%/yr\n",
-      "qty    = [fi.comp(qty_yr, i+1, qty_gr) for i in range(life)]\n",
+      "r           = 0.09       # 9%/yr discount rate\n",
+      "beg         = 0\n",
+      "end         = 10\n",
+      "life        = end-beg    # project lifetime\n",
+      "qty_yr      = 1000       # the qty sold last year\n",
+      "qty_gr      = 0.12       # 12%/yr\n",
+      "capx        = 100e3      # New tech. cost\n",
+      "cost_old    = 150        # $150/putter\n",
+      "cost_new    = 135        # $135/putter\n",
+      "cost_chg    = cost_old - cost_new\n",
       "\n",
-      "sales_price = 200   # $200/putter\n",
-      "cost_old    = 150   # $150/putter\n",
-      "profit_old  = sales_price - cost_old\n",
-      "rev_old     = [q * profit_old for q in qty]\n",
-      "cost_new    = 135\n",
-      "profit_new  = sales_price - cost_new\n",
-      "rev_new     = [q * profit_new for q in qty]\n",
-      "investment  = 100e3 # New tech. cost\n",
+      "qty_sold    = [fi.comp(qty_yr, i+1, qty_gr) for i in range(life)]\n",
+      "new_profit  = [q * cost_chg                 for q in qty_sold]\n",
       "\n",
-      "# Cashflows: Investment and the delta of new and old revenues\n",
-      "cf = [-investment] + [rev_new[n]-rev_old[n] for n in range(life)]\n",
+      "# Cashflows: Investment and the delta of new and old profits\n",
+      "cf = [-capx] + new_profit\n",
       "npv = fi.npv(cf, r)\n",
+      "\n",
+      "# Cashflow Statement\n",
+      "from pandas import DataFrame \n",
+      "col_names  = range(beg, end+1)\n",
+      "row_names = [\n",
+      "    'Quantity Sold (I)',               # 1\n",
+      "    'Additional Profit per Item (II)', # 2 \n",
+      "    'Additional Profits (I x II)',     # 3\n",
+      "    'CAPX',                            # 4\n",
+      "]\n",
+      "row_data   = [\n",
+      "    [0]          + qty_sold,        #  1\n",
+      "    [0]          + [cost_chg]*life, #  2\n",
+      "    [0]          + new_profit,      #  3\n",
+      "    [-capx]      + ([0]*life),      #  4\n",
+      "]\n",
+      "print DataFrame(row_data, columns=col_names, index=row_names, dtype=int),\"\\n\"\n",
       "\n",
       "ans.amt(fi.rnd(npv))"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "                                     0      1      2      3      4      5   \\\n",
+        "Quantity Sold (I)                     0   1120   1254   1404   1573   1762   \n",
+        "Additional Profit per Item (II)       0     15     15     15     15     15   \n",
+        "Additional Profits (I x II)           0  16800  18816  21073  23602  26435   \n",
+        "CAPX                            -100000      0      0      0      0      0   \n",
+        "\n",
+        "                                    6      7      8      9      10  \n",
+        "Quantity Sold (I)                 1973   2210   2475   2773   3105  \n",
+        "Additional Profit per Item (II)     15     15     15     15     15  \n",
+        "Additional Profits (I x II)      29607  33160  37139  41596  46587  \n",
+        "CAPX                                 0      0      0      0      0  \n",
+        "\n",
+        "[4 rows x 11 columns] \n",
+        "\n"
+       ]
+      },
       {
        "metadata": {},
        "output_type": "pyout",
@@ -412,7 +446,7 @@
       "# Cashflow Statement\n",
       "from pandas import DataFrame \n",
       "col_names  = range(beg, end+1)\n",
-      "row_labels = [\n",
+      "row_names = [\n",
       "    'Revenue',               #  1\n",
       "    'COGS',                  #  2\n",
       "    'SG&A',                  #  3\n",
@@ -438,7 +472,7 @@
       "    fcf,                     # 10 \n",
       "    ([0]*life)+[term]        # 11\n",
       "]\n",
-      "print DataFrame(row_data, columns=col_names, index=row_labels, dtype=int),\"\\n\"\n",
+      "print DataFrame(row_data, columns=col_names, index=row_names, dtype=int),\"\\n\"\n",
       "\n",
       "ans.amt(fi.rnd(npv))"
      ],
@@ -465,14 +499,7 @@
         "Free Cash Flow -12000000   4950000   5925000   7143750   8667187\n",
         "Terminal Value         0         0         0         0   5000000\n",
         "\n",
-        "[11 rows x 5 columns]"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " \n",
+        "[11 rows x 5 columns] \n",
         "\n"
        ]
       },
@@ -546,7 +573,7 @@
       "# Cashflow Statement\n",
       "from pandas import DataFrame \n",
       "col_names  = range(beg, end+1)\n",
-      "row_labels = [\n",
+      "row_names = [\n",
       "    'Revenue',               #  1\n",
       "    'COGS',                  #  2\n",
       "    'SG&A',                  #  3\n",
@@ -572,7 +599,7 @@
       "    fcf,                     # 10 \n",
       "    ([0]*life)+[term]        # 11\n",
       "]\n",
-      "print DataFrame(row_data, columns=col_names, index=row_labels, dtype=int),\"\\n\"\n",
+      "print DataFrame(row_data, columns=col_names, index=row_names, dtype=int),\"\\n\"\n",
       "\n",
       "ans.amt(fi.rnd(npv))"
      ],
@@ -791,9 +818,7 @@
       "Payables (AP) of \\$4 million and Inventory of \\$4 million. What will be the\n",
       "free cash flow next/this year if you boost revenue 8%, while holding COGS\n",
       "growth to 3%, and increasing AP 30%, while everything else remains same as\n",
-      "last year? (Assume no taxes and no additional capital expenditures.) (You\n",
-      "are encouraged to use a spreadsheet even for this specific type of\n",
-      "question.)\n"
+      "last year? (Assume no taxes and no additional capital expenditures.) \n"
      ]
     },
     {
