--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:27525b267c5ced995734c203f07c0427f59856fba99f513001a2d737d20660bf"
+  "signature": "sha256:858c80caa5d25f81d3fe7fd37805be9545e57de47180449326fa4fdbb627d2c9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -484,6 +484,176 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "### Problem 11 (Extra) \n",
+      "Sachin has asked his flat mate Jason for a \\$500 loan to cover a portion of\n",
+      "his rent and utility costs. Sachin proposes repaying the loan with \\$300 from\n",
+      "each of his next two financial aid disbursements, the first 4 months from\n",
+      "now and the second 12 months from now. Jason's alternative is to earn 5%\n",
+      "annually in his money market account. Assume there is no risk of default,\n",
+      "and that compounding is monthly. What is the NPV of the loan?"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.add('<Missing!>')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 13,
+       "text": [
+        "'<Missing!>'"
+       ]
+      }
+     ],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Problem 12 (Extra) \n",
+      "Juanita has an opportunity to invest in her friend's clothing\n",
+      "store. The initial investment is \\$10,000 and her expected cashflows are as\n",
+      "follows: Year 1: \\$300 Year 2: \\$500 Year 3: \\$1200 Year 4: \\$2000 Year 5: \\$2000\n",
+      "Year 6: \\$5000 Year 7: \\$5000 What is Juanita's IRR on this investment?(Enter\n",
+      "the answer with no more nor less than two decimal places, and leave off the\n",
+      "% sign. For example, if your answer is 13.97% you should enter it as 13.97\n",
+      "NOT 0.14 nor 14)\n"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.add('<Missing!>')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 14,
+       "text": [
+        "'<Missing!>'"
+       ]
+      }
+     ],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Problem 13 (Extra) \n",
+      "Yassein is looking to refinance his home because rates have gone\n",
+      "down from when he bought his house 10 years ago. He started with a 30-year\n",
+      "fixed-rate mortgage of \\$288,000 at an annual rate of 6.5%. He can now get a\n",
+      "20-year fixed-rate mortgage at an annual rate of 5.5% on the remaining\n",
+      "balance of his initial mortgage. (All loans require monthly payments.) In\n",
+      "order to re-finance, Yassein will need to pay closing costs of \\$3,500. These\n",
+      "costs are out of pocket and cannot be rolled into the new mortgage. How much\n",
+      "will refinancing save Yassein? (i.e. What is the NPV of the refinancing\n",
+      "decision?)"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.add('<Missing!>')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 15,
+       "text": [
+        "'<Missing!>'"
+       ]
+      }
+     ],
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Problem 14 (Extra) \n",
+      "Chandra has the opportunity to buy a vacant lot next to several\n",
+      "commercial properties for \\$50,000. She plans to buy the property and spend\n",
+      "another \\$60,000 immediately to put in a parking lot. She has talked to the\n",
+      "local businesses and has some contracts lined up to fill the parking\n",
+      "spaces. The profits from the contracts will provide \\$25,000 per year and the\n",
+      "contracts will last 10 years. What is the NPV of Chandra's plan if the\n",
+      "appropriate discount/interest rate is 10%?"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.add('<Missing!>')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 16,
+       "text": [
+        "'<Missing!>'"
+       ]
+      }
+     ],
+     "prompt_number": 16
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Problem 15 (Extra) \n",
+      "Rafael owned an apartment building that burned down. The empty\n",
+      "lot is worth \\$70,000 and Rafael has received \\$200,000 from the insurance\n",
+      "company. Rafael plans to build another apartment building that will cost\n",
+      "\\$275,000. His real estate adviser estimates that the expected value of the\n",
+      "finished building on the real estate market will be \\$385,000 next year. The\n",
+      "discount/interest rate is 10%? What are the NPV and IRR of this decision?"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.add('<Missing!>')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 17,
+       "text": [
+        "'<Missing!>'"
+       ]
+      }
+     ],
+     "prompt_number": 17
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "## Answers"
      ]
     },
@@ -509,11 +679,16 @@
         " 7. 1554745\n",
         " 8. 275996\n",
         " 9. (42977; 11.09%)\n",
-        "10. 74022\n"
+        "10. 74022\n",
+        "11. <Missing!>\n",
+        "12. <Missing!>\n",
+        "13. <Missing!>\n",
+        "14. <Missing!>\n",
+        "15. <Missing!>\n"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 18
     }
    ],
    "metadata": {}
