hw3; q10: fix solution

--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:858c80caa5d25f81d3fe7fd37805be9545e57de47180449326fa4fdbb627d2c9"
+  "signature": "sha256:20fa552980e211b6871bfa44bab9ce652794b59ecd465a7232762de240a1ff5a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -447,24 +447,15 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Approach:\n",
-      "#  Setup a single cashflow (starting with purchase price, 3 years of \n",
-      "#  cash flows (low), and the 25 years of cash flows(high)) and then \n",
-      "#  compute the npv of that cf. Finally, move that npv forward three years to \n",
-      "#  today.\n",
-      "r              = 0.09             # 9%/yr => cap. rate\n",
-      "purchase_price = 350e3            # $350,000\n",
-      "n_init         = 3                # 3 years at low return\n",
-      "n_rest         = 25               # 25 years at high return\n",
-      "return_init    = 35e3             # $35,000/yr\n",
-      "return_rest    = 42e3             # $42,000/yr\n",
-      "cash_flow_init = [return_init] * n_init  \n",
-      "cash_flow_rest = [return_rest] * n_rest  \n",
-      "cf             = [-purchase_price] + cash_flow_init + cash_flow_rest\n",
-      "npv            = fi.npv(cf, r)\n",
-      "npv_today      = fi.comp(npv, n_init, r)\n",
+      "# Apparently, the value of the rental propertry (before or after the increase in rent) is unrelated to the\n",
+      "# purchase price or how many previous rents have been paind. Basically, after the increase in rent we have \n",
+      "# new cacheflows and the value of the property is simply the PV of these new cacheflows.\n",
+      "r              = 0.09             # 9%/yr\n",
+      "life           = 25               # 25 years at high return\n",
+      "rent_new       = 42e3             # $42,000/yr\n",
+      "property_value = fi.pv(rent_new, life, r)\n",
       "\n",
-      "ans.amt(fi.rnd(npv_today))"
+      "ans.amt(fi.rnd(property_value))"
      ],
      "language": "python",
      "metadata": {},
@@ -474,7 +465,7 @@
        "output_type": "pyout",
        "prompt_number": 11,
        "text": [
-        "'$74,022'"
+        "'$412,548'"
        ]
       }
      ],
@@ -505,13 +496,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 13,
+       "prompt_number": 12,
        "text": [
         "'<Missing!>'"
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -539,13 +530,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 14,
+       "prompt_number": 13,
        "text": [
         "'<Missing!>'"
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
@@ -575,13 +566,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 14,
        "text": [
         "'<Missing!>'"
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -609,13 +600,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 16,
+       "prompt_number": 15,
        "text": [
         "'<Missing!>'"
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
@@ -642,13 +633,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 17,
+       "prompt_number": 16,
        "text": [
         "'<Missing!>'"
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -679,7 +670,7 @@
         " 7. 1554745\n",
         " 8. 275996\n",
         " 9. (42977; 11.09%)\n",
-        "10. 74022\n",
+        "10. 412548\n",
         "11. <Missing!>\n",
         "12. <Missing!>\n",
         "13. <Missing!>\n",
@@ -688,7 +679,7 @@
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 17
     }
    ],
    "metadata": {}
