new problems plus fixes

--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:20fa552980e211b6871bfa44bab9ce652794b59ecd465a7232762de240a1ff5a"
+  "signature": "sha256:b0eee956341883713cce6d5af5f2461863fdaed163cf7ecd67c3a036a7a41bc8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -45,10 +45,15 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "r   = 0.06/12\n",
-      "npv = -1200 + fi.disc(450, 3, r) + fi.disc(450, 6, r) + fi.disc(450, 15, r)\n",
+      "r     = 0.06/12    # 6%/yr * 1yr/12months interest rate\n",
+      "loan  = 1200       # $1200 loan\n",
+      "repay = [{'per':  3, 'pmt': 450},  # $450 in 3 months\n",
+      "         {'per':  6, 'pmt': 450},  # $450 in 6 months\n",
+      "         {'per': 15, 'pmt': 450}]  # $450 in 15 months\n",
+      "npv_loan = -loan\n",
+      "for p in repay: npv_loan += fi.disc(p['pmt'], p['per'], r)\n",
       "\n",
-      "ans.amt(fi.rnd(npv))"
+      "ans.amt(fi.rnd(npv_loan))"
      ],
      "language": "python",
      "metadata": {},
@@ -210,17 +215,20 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "balance_old = 240000\n",
-      "r_old       = 0.0675/12\n",
-      "n_old       = 30*12\n",
-      "pmt_old     = fi.pmt(balance_old, n_old, r_old)\n",
+      "# Original Loan\n",
+      "loan    = 240000                   # $240,000 loan amount\n",
+      "r       = 0.0675/12                # 6.75%/yr * 1yr/12months monthly interest rate\n",
+      "n       = 30*12                    # 30yr * 12 months loan periods\n",
+      "pmt     = fi.pmt(loan, n, r)       # payments per period\n",
       "\n",
-      "n_new       = 25*12\n",
-      "r_new       = 0.055/12\n",
-      "balance_new = fi.pv(pmt_old, n_new, r_old)\n",
-      "cost_old    = fi.pv(pmt_old, n_new, r_new)\n",
-      "cost_new    = balance_new + 4500 # closing costs\n",
-      "savings     = cost_old - cost_new \n",
+      "# Refinanced Loan\n",
+      "n_new   = 25*12                    # 25yr * 12 months loan periods of new loan\n",
+      "r_new   = 0.055/12                 # 5.5%/yr * 1yr/12months new monthly interest rate\n",
+      "closing = 4500                     # $4,500 closing costs of new loan\n",
+      "pv_orig = fi.pv(pmt, n_new, r_new) # The PV of the remaining original payments (using new r)\n",
+      "balance = fi.pv(pmt, n_new, r)     # Outstanding balance on original loan (using old r)\n",
+      "pv_new  = balance + closing        # PV of the new loan\n",
+      "savings = pv_orig - pv_new         # Savings is difference of PV of the old and new CF's\n",
       "\n",
       "ans.amt(fi.rnd(savings))"
      ],
@@ -254,6 +262,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# Approach 1: Get NPV upto 2012 and add discounted perpetuity post 2012\n",
       "n                 = 2012 - 1867\n",
       "r                 = 0.07   # 7%/yr\n",
       "purchase_price    = 7.2e6  # $7.2M\n",
@@ -261,7 +270,43 @@
       "revenue_inflation = 0.03   # 3%/yr\n",
       "revenue_stream    = [fi.disc(revenue_2012, x-1, revenue_inflation) for x in range(n,0,-1)] \n",
       "cf                = [-purchase_price] + revenue_stream\n",
-      "npv               = fi.npv(cf, r)\n",
+      "npv               = fi.npv(cf, r) \n",
+      "prep              = fi.comp(revenue_2012,1, revenue_inflation) / (r - revenue_inflation)\n",
+      "npv               = npv + fi.disc(prep, n, r)\n",
+      "print \"Approach 1: NPV = %d\" % fi.rnd(npv)\n",
+      "\n",
+      "# Approach 2: Compute the annuity up 2012 and add the prepeturity to last year for remaining years\n",
+      "n                 = 2012 - 1867\n",
+      "r                 = 0.07   # 7%/yr\n",
+      "purchase_price    = 7.2e6  # $7.2M\n",
+      "revenue_2012      = 50e6   # $50M\n",
+      "revenue_inflation = 0.03   # 3%/yr\n",
+      "revenue_stream    = [fi.disc(revenue_2012, x-1, revenue_inflation) for x in range(n,0,-1)] \n",
+      "cf                = [-purchase_price] + revenue_stream\n",
+      "prep              = fi.comp(revenue_2012,1, revenue_inflation) / (r - revenue_inflation)\n",
+      "cf[n]             += prep\n",
+      "npv               = fi.npv(cf, r) \n",
+      "print \"Approach 2: NPV = %d\" % fi.rnd(npv)\n",
+      "\n",
+      "# Approach 3: Get NPV upto 2012 and add tax revenue upto 4000 years post 2012 \n",
+      "#             (after that the amounts while getting bigger are discounted to \n",
+      "#             insignificant amounts)\n",
+      "n                 = 2012 - 1867\n",
+      "r                 = 0.07   # 7%/yr\n",
+      "purchase_price    = 7.2e6  # $7.2M\n",
+      "revenue_2012      = 50e6   # $50M\n",
+      "revenue_inflation = 0.03   # 3%/yr\n",
+      "revenue_stream    = [fi.disc(revenue_2012, x-1, revenue_inflation) for x in range(n,0,-1)] \n",
+      "post_2012_revenue = [fi.comp(revenue_2012, i, revenue_inflation) for i in range(1, 4000)] \n",
+      "cf                = [-purchase_price] + revenue_stream + post_2012_revenue\n",
+      "npv               = fi.npv(cf, r) \n",
+      "print \"PV(Last Tax Revenue=%e, 1867) = %0.10f\" % (cf[len(cf)-1],fi.disc(cf[len(cf)-1],n+4000,r))\n",
+      "print \"Approach 3: NPV = %d\" % fi.rnd(npv)\n",
+      "\n",
+      "# Approach 4: Compute tax revenues in 1868, use that as perpetuity, and combine with purchase price\n",
+      "#             (This is the simplist approach)\n",
+      "npv = -purchase_price + fi.disc(revenue_2012, n-1, revenue_inflation) /(r - revenue_inflation)\n",
+      "print \"Approach 4: NPV = %d\" % fi.rnd(npv)\n",
       "\n",
       "ans.amt(fi.rnd(npv))"
      ],
@@ -269,11 +314,22 @@
      "metadata": {},
      "outputs": [
       {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Approach 1: NPV = 10515347\n",
+        "Approach 2: NPV = 10515347\n",
+        "PV(Last Tax Revenue=1.084006e+59, 1867) = 0.0000000000\n",
+        "Approach 3: NPV = 10515347\n",
+        "Approach 4: NPV = 10515347\n"
+       ]
+      },
+      {
        "metadata": {},
        "output_type": "pyout",
        "prompt_number": 7,
        "text": [
-        "'$10,444,699'"
+        "'$10,515,347'"
        ]
       }
      ],
@@ -488,7 +544,14 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.add('<Missing!>')"
+      "r    = 0.05/12    # 5%/yr * 1yr/12months interest rate\n",
+      "loan = 500        # $500 loan\n",
+      "pay = [{'pmt': 300, 'per': 4},  # $300 in 4 months\n",
+      "       {'pmt': 300, 'per': 12}] # $300 in 12 months\n",
+      "npv_loan = -loan\n",
+      "for p in pay: npv_loan += fi.disc(p['pmt'], p['per'], r)\n",
+      "\n",
+      "ans.amt(fi.rnd(npv_loan))"
      ],
      "language": "python",
      "metadata": {},
@@ -498,7 +561,7 @@
        "output_type": "pyout",
        "prompt_number": 12,
        "text": [
-        "'<Missing!>'"
+        "'$80'"
        ]
       }
      ],
@@ -522,7 +585,11 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.add('<Missing!>')"
+      "# Year:     0,    1,    2,    3,    4,     5,     6,     7\n",
+      "cf  = [-10000,  300,  500, 1200, 2000,  2000,  5000,  5000]\n",
+      "irr = fi.irr(cf)\n",
+      "\n",
+      "ans.add(round(irr*100, 2))"
      ],
      "language": "python",
      "metadata": {},
@@ -532,7 +599,7 @@
        "output_type": "pyout",
        "prompt_number": 13,
        "text": [
-        "'<Missing!>'"
+        "9.12"
        ]
       }
      ],
@@ -558,7 +625,22 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.add('<Missing!>')"
+      "# Original Loan\n",
+      "loan    = 288000                   # $288,000 loan amount\n",
+      "r       = 0.065/12                 # 6.5%/yr * 1yr/12months monthly interest rate\n",
+      "n       = 30*12                    # 30yr * 12 months loan periods\n",
+      "pmt     = fi.pmt(loan, n, r)       # payments per period\n",
+      "\n",
+      "# Refinanced Loan\n",
+      "n_new   = 20*12                    # 20yr * 12 months loan periods of new loan\n",
+      "r_new   = 0.055/12                 # 5.5%/yr * 1yr/12months new monthly interest rate\n",
+      "closing = 3500                     # $3,500 closing costs of new loan\n",
+      "pv_orig = fi.pv(pmt, n_new, r_new) # The PV of the remaining original payments (using new r)\n",
+      "balance = fi.pv(pmt, n_new, r)     # Outstanding balance on original loan (using old r)\n",
+      "pv_new  = balance + closing        # PV of the new loan\n",
+      "savings = pv_orig - pv_new         # Savings is difference of PV of the old and new CF's\n",
+      "\n",
+      "ans.amt(fi.rnd(savings))"
      ],
      "language": "python",
      "metadata": {},
@@ -568,7 +650,7 @@
        "output_type": "pyout",
        "prompt_number": 14,
        "text": [
-        "'<Missing!>'"
+        "'$16,975'"
        ]
       }
      ],
@@ -592,7 +674,17 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.add('<Missing!>')"
+      "r      = 0.1    # 10%/yr discount rate\n",
+      "price  = 50e3   # $50,000 purchase price of vacant lot\n",
+      "park   = 60e3   # $60,000 cost of putting in parking lots\n",
+      "pft_yr = 25e3   # $25,000/yr \n",
+      "life   = 10     # lifetime of contracts\n",
+      "\n",
+      "capx   = price + park\n",
+      "cf     = [-capx] + [pft_yr] * life\n",
+      "npv    = fi.npv(cf,r)\n",
+      "\n",
+      "ans.amt(fi.rnd(npv))"
      ],
      "language": "python",
      "metadata": {},
@@ -602,7 +694,7 @@
        "output_type": "pyout",
        "prompt_number": 15,
        "text": [
-        "'<Missing!>'"
+        "'$43,614'"
        ]
       }
      ],
@@ -625,7 +717,16 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.add('<Missing!>')"
+      "r      = 0.1    # 10%/yr discount rate\n",
+      "land   = 70e3   # $70,000 value of empty lot\n",
+      "const  = 275e3  # $275,000 constuction cost of new building\n",
+      "sales  = 385e3  # $385,000 sales price of land and bldg.\n",
+      "capx   = land + const\n",
+      "cf     = [-capx, sales]\n",
+      "npv    = fi.npv(cf, r)\n",
+      "irr    = fi.irr(cf)\n",
+      "\n",
+      "ans.add(\"npv=%d, irr=%0.2f\" % (fi.rnd(npv), round(irr*100,2)))"
      ],
      "language": "python",
      "metadata": {},
@@ -635,11 +736,46 @@
        "output_type": "pyout",
        "prompt_number": 16,
        "text": [
-        "'<Missing!>'"
+        "'npv=5000, irr=11.59'"
        ]
       }
      ],
      "prompt_number": 16
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Problem 16 (Extra) \n",
+      "(15 points) Roxanne invested \\$500,000 in a new business 6 years ago. The business was expected to pay \\$8,000 each month for the next 21 years (in excess of all costs). The annual cost of capital (or interest rate) for this type of business was 9%. What is the value of the business today?(Enter just the number without the $ sign or a comma; round off decimals.)\n"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "r      = 0.09/12        # 6%/yr * 1yr/12months discount rate\n",
+      "rev_mo = 8e3            # $8,000 monthly revenue\n",
+      "end    = 21             # Ending year\n",
+      "now    = 6              # Current year\n",
+      "life   = (end - now)*12 # lifetime of investment in months\n",
+      "pv     = fi.pv(rev_mo, life, r)\n",
+      "\n",
+      "ans.amt(fi.rnd(pv))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 17,
+       "text": [
+        "'$788,747'"
+       ]
+      }
+     ],
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -666,20 +802,21 @@
         " 3. 5\n",
         " 4. 3720\n",
         " 5. 23686\n",
-        " 6. 10444699\n",
+        " 6. 10515347\n",
         " 7. 1554745\n",
         " 8. 275996\n",
         " 9. (42977; 11.09%)\n",
         "10. 412548\n",
-        "11. <Missing!>\n",
-        "12. <Missing!>\n",
-        "13. <Missing!>\n",
-        "14. <Missing!>\n",
-        "15. <Missing!>\n"
+        "11. 80\n",
+        "12. 9.12\n",
+        "13. 16975\n",
+        "14. 43614\n",
+        "15. npv=5000, irr=11.59\n",
+        "16. 788747\n"
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 18
     }
    ],
    "metadata": {}
