--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:5fe1ef62b5e378398919902f3c658f249e45363301f5459493e9f26b0e5bdb34"
+  "signature": "sha256:3e6568e2a8c8780f112cf57b6ea04bec2ef00e5bffe27e5f77ff1cd357611060"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -272,16 +272,20 @@
      "input": [
       "rev   = 20e6    # $20 million revenues\n",
       "rev_g = 0.06    # 6%/yr revenue growth\n",
-      "cog   = 12e6    # $12 million COGS\n",
+      "cog   = -12e6    # $12 million COGS\n",
       "cog_g = 0.03    # 3%/yr revenue growth\n",
-      "sga   = 2e6     # $2 million SG&A\n",
+      "sga   = -2e6     # $2 million SG&A\n",
+      "ap    = 0\n",
+      "ap_g  = 0\n",
       "ar    = 6e6     # $6 million Account Receivables (AR)\n",
       "ar_g  = 0.12    # 12%/yr AR growth\n",
-      "wc    = ar*ar_g # change in corking capital; only AR is changed\n",
+      "inv   = 0\n",
+      "inv_g = 0\n",
+      "wc_chg = -(inv*inv_g + ar*ar_g - ap*ap_g) # change in working capital\n",
       "\n",
-      "fcf = fi.comp(rev, 1, rev_g) - fi.comp(cog, 1, cog_g) - sga - wc\n",
+      "fcf = fi.comp(rev, 1, rev_g) + fi.comp(cog, 1, cog_g) + sga + wc_chg\n",
       "\n",
-      "ans.amt(fi.rnd(fcf))"
+      "ans.amt(fi.rnd(fcf)) # '$6,120,000'"
      ],
      "language": "python",
      "metadata": {},
@@ -827,14 +831,18 @@
      "input": [
       "rev   = 36e6    # $36 million revenues\n",
       "rev_g = 0.08    # 8%/yr revenue growth\n",
-      "cog   = 32e6    # $32 million COGS\n",
+      "cog   = -32e6    # $32 million COGS\n",
       "cog_g = 0.03    # 3%/yr revenue growth\n",
-      "sga   = 3e6     # $3 million SG&A\n",
+      "sga   = -3e6     # $3 million SG&A\n",
       "ap    = 4e6     # $4 million Account Payable (AP)\n",
       "ap_g  = 0.30    # 30%/yr AP growth\n",
-      "wc    = ap*ap_g # change in working capital; only AP is changed\n",
+      "ar    = 0\n",
+      "ar_g  = 0\n",
+      "inv   = 0\n",
+      "inv_g = 0\n",
+      "wc_chg = -(inv*inv_g + ar*ar_g - ap*ap_g) # change in working capital\n",
       "\n",
-      "fcf = fi.comp(rev, 1, rev_g) - fi.comp(cog, 1, cog_g) - sga - wc\n",
+      "fcf = fi.comp(rev, 1, rev_g) + fi.comp(cog, 1, cog_g) + sga + wc_chg\n",
       "\n",
       "ans.amt(fi.rnd(fcf))"
      ],
@@ -846,7 +854,7 @@
        "output_type": "pyout",
        "prompt_number": 14,
        "text": [
-        "'$1,720,000'"
+        "'$4,120,000'"
        ]
       }
      ],
@@ -1023,7 +1031,7 @@
         "10. ('H', 23705)\n",
         "11. Cannot decide based on information\n",
         "12. Project C\n",
-        "13. 1720000\n",
+        "13. 4120000\n",
         "14. 7879584\n"
        ]
       }
