--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b0eee956341883713cce6d5af5f2461863fdaed163cf7ecd67c3a036a7a41bc8"
+  "signature": "sha256:1236fa29f8cffe0fa207993858a08cc32c359d408a97ff5b4fbf963e0ae5b5c2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -50,9 +50,7 @@
       "repay = [{'per':  3, 'pmt': 450},  # $450 in 3 months\n",
       "         {'per':  6, 'pmt': 450},  # $450 in 6 months\n",
       "         {'per': 15, 'pmt': 450}]  # $450 in 15 months\n",
-      "npv_loan = -loan\n",
-      "for p in repay: npv_loan += fi.disc(p['pmt'], p['per'], r)\n",
-      "\n",
+      "npv_loan = reduce((lambda npv, p: npv + fi.disc(p['pmt'], p['per'], r)), repay, -loan)\n",
       "ans.amt(fi.rnd(npv_loan))"
      ],
      "language": "python",
@@ -544,12 +542,11 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "r    = 0.05/12    # 5%/yr * 1yr/12months interest rate\n",
-      "loan = 500        # $500 loan\n",
-      "pay = [{'pmt': 300, 'per': 4},  # $300 in 4 months\n",
-      "       {'pmt': 300, 'per': 12}] # $300 in 12 months\n",
-      "npv_loan = -loan\n",
-      "for p in pay: npv_loan += fi.disc(p['pmt'], p['per'], r)\n",
+      "r        = 0.05/12                   # 5%/yr * 1yr/12months interest rate\n",
+      "loan     = 500                       # $500 loan\n",
+      "repay    = [{'pmt': 300, 'per': 4},  # $300 in 4 months\n",
+      "            {'pmt': 300, 'per': 12}] # $300 in 12 months\n",
+      "npv_loan = reduce((lambda npv, p: npv + fi.disc(p['pmt'], p['per'], r)), repay, -loan)\n",
       "\n",
       "ans.amt(fi.rnd(npv_loan))"
      ],
