--- a/hw5.ipynb
+++ b/hw5.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:030d537557c8cfb4ead63d59dbbd39afd4bc91aae2efa718537ca07f1d18a507"
+  "signature": "sha256:9ee13b85613c8787bab583ad05c33dd75960537d6f4fe39d38c91c1c61df2660"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -41,6 +41,30 @@
      ]
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "r  = 0.03/2  # 3% discount rate, but componded every 6 months\n",
+      "fv = 10e3    # $10,000 face value\n",
+      "n  = 5*2     # 5 years * 2 six-month-periods per year\n",
+      "price = fi.disc(fv, n, r)\n",
+      "ans.add(fi.rnd(price))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 2,
+       "text": [
+        "8617"
+       ]
+      }
+     ],
+     "prompt_number": 2
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
@@ -49,6 +73,27 @@
       "* False\n",
       "* True"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Bond prices and yeilds are inversely related\n",
+      "ans.add(False)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 3,
+       "text": [
+        "False"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -61,12 +106,58 @@
      ]
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Coupon rate and YTM have no direct relationship\n",
+      "ans.add(False)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 4,
+       "text": [
+        "False"
+       ]
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "###Question 4\n",
       "(10 points) What is the yield to maturity (YTM) of a zero coupon bond with a face value of \\$1,000, current price of \\$950 and maturity of 2 years? (Recall that the compounding interval is 6 months and the YTM, like all interest rates, is reported on an annualized basis.) (Enter the answer with no more nor less than two decimal places, and leave off the % sign. For example, if your answer is 13.97% you should enter it as 13.97 NOT 0.14 nor 14)\n"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "fv  = 1e3    # $1000 face value\n",
+      "pv  = 0.95e3 # $950 price\n",
+      "n   = 2*2    # 2 years * 2 six-months-periods per year\n",
+      "r   = (fv/pv)**(1/float(n)) - 1\n",
+      "ytm = 2*r*100\n",
+      "ans.add(round(ytm,2))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 5,
+       "text": [
+        "2.58"
+       ]
+      }
+     ],
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -79,12 +170,60 @@
      ]
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Yeilds in the furture are higher due to, among other things, interest rate risk.\n",
+      "ans.add(True)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 6,
+       "text": [
+        "True"
+       ]
+      }
+     ],
+     "prompt_number": 6
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "###Question 6\n",
       "(10 points) Suppose Wolverine Steel Company wishes to issue a \\$100,000 bond with a maturity of 5 years to raise \\$79,720. The market requires a yield to maturity (YTM) of 8% for this company's borrowing/debt. How much coupon will the company have to pay every six months?(Enter just the number without the \\$ sign or a comma, and no decimals.)\n"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "fv  = 100e3   # $100,000 face value\n",
+      "pv  = 79.72e3 # $79,720 price\n",
+      "n   = 5*2     # 5 years * 2 six-month-periods per year\n",
+      "ytm = 0.08    # 8% YTM\n",
+      "r   = ytm/2   # 2 six-month-periods per year\n",
+      "c   = fi.pmt(pv, n, r, fv)\n",
+      "assert fi.pv(c,n,r,fv=fv) == pv, \"Bond Price doesn't match PV(Coupon+Face)\"\n",
+      "ans.add(fi.rnd(c))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 7,
+       "text": [
+        "1500"
+       ]
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -98,6 +237,27 @@
      ]
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Interest rate risk increases with duration; hence the shorter duration bond\n",
+      "ans.add('Bond A')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 8,
+       "text": [
+        "'Bond A'"
+       ]
+      }
+     ],
+     "prompt_number": 8
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
@@ -106,12 +266,76 @@
      ]
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Three years ago (9 years to maturity):\n",
+      "fv  = 1e3   # $1,000 face value\n",
+      "ytm = 0.08  # 8% YTM\n",
+      "r   = ytm/2 # per period rate\n",
+      "n   = 9 * 2 # 9 year duration * 2 six-month-periods per year\n",
+      "p_0 = fi.pv(0, n, r, fv=fv) # Purchase Price of Bond\n",
+      "\n",
+      "# Today (6 years to maturity):\n",
+      "ytm = 0.05  # 5% YTM\n",
+      "r   = ytm/2\n",
+      "n   = 6 * 2 # 6 year duration * 2 six-month-periods per year\n",
+      "p_3 = fi.pv(0, n, r, fv=fv) # Sales Price of Bond\n",
+      "\n",
+      "# Capital Gains = Sales Price - Purchase Price\n",
+      "cap_gain = p_3 - p_0 \n",
+      "\n",
+      "ans.add(fi.rnd(cap_gain))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 9,
+       "text": [
+        "250"
+       ]
+      }
+     ],
+     "prompt_number": 9
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "###Question 9\n",
       "(15 points) Hard Spun Industries (HSI) has a project that it expects will produce a cash flow of \\$2.5 million in 12 years. To finance the project, the company needs to borrow \\$1.5 million today. The project will also produce intermediate cash flows, \\$150,000 of which HSI will use to service annual coupon payments (the coupons will actually be paid semi-annually as a payment of \\$75,000). Based on the risk of this investment, market participants will require a 10% yield. If HSI wishes a maturity of 12 years (matching the arrival of the lump sum cash flow), what does the face value of the bond have to be? (Recall that the compounding interval is 6 months and the YTM, like all interest rates, is reported on an annualized basis.) (Enter just the number without the \\$ sign or a comma, and no decimals.)\n"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "pv  = 1.5e6 # $1.5 million bond price\n",
+      "ytm = 0.1   # 10% YTM\n",
+      "r   = ytm/2 # 2 six-month-periods per year\n",
+      "c   = 75e3  # 75,000 coupon every six-months\n",
+      "n   = 12*2  # 12 years * 2 six-month-periods per year\n",
+      "\n",
+      "# Solving for Face in: Price = PV(Coupon,n,r) + Discount(Face,n,r)\n",
+      "fv  = fi.comp(pv-fi.pv(c,n,r), n, r) \n",
+      "ans.add(fi.rnd(fv))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 10,
+       "text": [
+        "1500000"
+       ]
+      }
+     ],
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -125,12 +349,61 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# Two years ago:\n",
+      "c   = 2e3   # $2,000 coupon paid every six months\n",
+      "n   = 5*2   # 5 year maturity * 2 six-month-periods per year\n",
+      "par = 500e3 # $500,000 face/par value\n",
+      "ytm = 0.05  # 5% YTM\n",
+      "\n",
+      "# Today\n",
+      "ytm  = 0.1  # 10% YTM\n",
+      "r    = ytm/2\n",
+      "n    = 3*2\n",
+      "post = fi.fv(c,n,r=0.03) # Postponed coupons @ r=3%\n",
+      "pv   = fi.pv(0,n,r,fv=post+par)\n",
+      "ans.add(fi.rnd(pv))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": [
+        "382761"
+       ]
+      }
+     ],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "ans.display()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 1. 8617\n",
+        " 2. False\n",
+        " 3. False\n",
+        " 4. 2.58\n",
+        " 5. True\n",
+        " 6. 1500\n",
+        " 7. Bond A\n",
+        " 8. 250\n",
+        " 9. 1500000\n",
+        "10. 382761\n"
+       ]
+      }
+     ],
+     "prompt_number": 12
     }
    ],
    "metadata": {}
