--- a/hw5.ipynb
+++ b/hw5.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9ee13b85613c8787bab583ad05c33dd75960537d6f4fe39d38c91c1c61df2660"
+  "signature": "sha256:1559892e20ca3c4d2f39334467d254f19fe4b844f9d8390c4ebd28437f9d29d6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -44,10 +44,11 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "r  = 0.03/2  # 3% discount rate, but componded every 6 months\n",
-      "fv = 10e3    # $10,000 face value\n",
-      "n  = 5*2     # 5 years * 2 six-month-periods per year\n",
-      "price = fi.disc(fv, n, r)\n",
+      "r     = 0.03/2  # 3% discount rate, but componded every 6 months\n",
+      "face  = 10e3    # $10,000 face value\n",
+      "n     = 5*2     # 5 years * 2 six-month-periods per year\n",
+      "price = fi.disc(face, n, r)\n",
+      "\n",
       "ans.add(fi.rnd(price))"
      ],
      "language": "python",
@@ -138,11 +139,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "fv  = 1e3    # $1000 face value\n",
-      "pv  = 0.95e3 # $950 price\n",
-      "n   = 2*2    # 2 years * 2 six-months-periods per year\n",
-      "r   = (fv/pv)**(1/float(n)) - 1\n",
-      "ytm = 2*r*100\n",
+      "face   = 1e3    # $1000 face value\n",
+      "price  = 0.95e3 # $950 price\n",
+      "n      = 2*2    # 2 years * 2 six-months-periods per year\n",
+      "r      = (face/price)**(1/float(n)) - 1\n",
+      "ytm    = 2*r*100\n",
+      "\n",
       "ans.add(round(ytm,2))"
      ],
      "language": "python",
@@ -202,13 +204,14 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "fv  = 100e3   # $100,000 face value\n",
-      "pv  = 79.72e3 # $79,720 price\n",
-      "n   = 5*2     # 5 years * 2 six-month-periods per year\n",
-      "ytm = 0.08    # 8% YTM\n",
-      "r   = ytm/2   # 2 six-month-periods per year\n",
-      "c   = fi.pmt(pv, n, r, fv)\n",
-      "assert fi.pv(c,n,r,fv=fv) == pv, \"Bond Price doesn't match PV(Coupon+Face)\"\n",
+      "face  = 100e3   # $100,000 face value\n",
+      "price = 79.72e3 # $79,720 price\n",
+      "n     = 5*2     # 5 years * 2 six-month-periods per year\n",
+      "ytm   = 0.08    # 8% YTM\n",
+      "r     = ytm/2   # 2 six-month-periods per year\n",
+      "c     = fi.pmt(price, n, r, face)\n",
+      "assert fi.pv(c,n,r,fv=face) == price, \"Bond Price doesn't match PV(Coupon+Face)\"\n",
+      "\n",
       "ans.add(fi.rnd(c))"
      ],
      "language": "python",
@@ -270,17 +273,17 @@
      "collapsed": false,
      "input": [
       "# Three years ago (9 years to maturity):\n",
-      "fv  = 1e3   # $1,000 face value\n",
-      "ytm = 0.08  # 8% YTM\n",
-      "r   = ytm/2 # per period rate\n",
-      "n   = 9 * 2 # 9 year duration * 2 six-month-periods per year\n",
-      "p_0 = fi.pv(0, n, r, fv=fv) # Purchase Price of Bond\n",
+      "face = 1e3   # $1,000 face value\n",
+      "ytm  = 0.08  # 8% YTM\n",
+      "r    = ytm/2 # per period rate\n",
+      "n    = 9 * 2 # 9 year duration * 2 six-month-periods per year\n",
+      "p_0  = fi.pv(0, n, r, fv=face) # Purchase Price of Bond\n",
       "\n",
       "# Today (6 years to maturity):\n",
-      "ytm = 0.05  # 5% YTM\n",
-      "r   = ytm/2\n",
-      "n   = 6 * 2 # 6 year duration * 2 six-month-periods per year\n",
-      "p_3 = fi.pv(0, n, r, fv=fv) # Sales Price of Bond\n",
+      "ytm  = 0.05  # 5% YTM\n",
+      "r    = ytm/2\n",
+      "n    = 6 * 2 # 6 year duration * 2 six-month-periods per year\n",
+      "p_3  = fi.pv(0, n, r, fv=face) # Sales Price of Bond\n",
       "\n",
       "# Capital Gains = Sales Price - Purchase Price\n",
       "cap_gain = p_3 - p_0 \n",
@@ -313,15 +316,15 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "pv  = 1.5e6 # $1.5 million bond price\n",
-      "ytm = 0.1   # 10% YTM\n",
-      "r   = ytm/2 # 2 six-month-periods per year\n",
-      "c   = 75e3  # 75,000 coupon every six-months\n",
-      "n   = 12*2  # 12 years * 2 six-month-periods per year\n",
+      "price = 1.5e6 # $1.5 million bond price\n",
+      "ytm   = 0.1   # 10% YTM\n",
+      "r     = ytm/2 # 2 six-month-periods per year\n",
+      "c     = 75e3  # 75,000 coupon every six-months\n",
+      "n     = 12*2  # 12 years * 2 six-month-periods per year\n",
       "\n",
       "# Solving for Face in: Price = PV(Coupon,n,r) + Discount(Face,n,r)\n",
-      "fv  = fi.comp(pv-fi.pv(c,n,r), n, r) \n",
-      "ans.add(fi.rnd(fv))"
+      "face  = fi.comp(price-fi.pv(c,n,r), n, r) \n",
+      "ans.add(fi.rnd(face))"
      ],
      "language": "python",
      "metadata": {},
@@ -350,18 +353,19 @@
      "collapsed": false,
      "input": [
       "# Two years ago:\n",
-      "c   = 2e3   # $2,000 coupon paid every six months\n",
-      "n   = 5*2   # 5 year maturity * 2 six-month-periods per year\n",
-      "par = 500e3 # $500,000 face/par value\n",
-      "ytm = 0.05  # 5% YTM\n",
+      "c     = 2e3   # $2,000 coupon paid every six months\n",
+      "n     = 5*2   # 5 year maturity * 2 six-month-periods per year\n",
+      "face  = 500e3 # $500,000 face/par value\n",
+      "ytm   = 0.05  # 5% YTM\n",
       "\n",
       "# Today\n",
-      "ytm  = 0.1  # 10% YTM\n",
-      "r    = ytm/2\n",
-      "n    = 3*2\n",
-      "post = fi.fv(c,n,r=0.03) # Postponed coupons @ r=3%\n",
-      "pv   = fi.pv(0,n,r,fv=post+par)\n",
-      "ans.add(fi.rnd(pv))"
+      "ytm   = 0.1  # 10% YTM\n",
+      "r     = ytm/2\n",
+      "n     = 3*2\n",
+      "post  = fi.fv(c,n,r=0.03) # Postponed coupons @ r=3%\n",
+      "price = fi.pv(0,n,r,fv=post+face)\n",
+      "\n",
+      "ans.add(fi.rnd(price))"
      ],
      "language": "python",
      "metadata": {},
