hw5: solutions - cleanup

--- a/hw5.ipynb
+++ b/hw5.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1559892e20ca3c4d2f39334467d254f19fe4b844f9d8390c4ebd28437f9d29d6"
+  "signature": "sha256:c212f464a3409cf915ac9a92288f283038066583812da58dc18c41c7f8cb6628"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -358,7 +358,7 @@
       "face  = 500e3 # $500,000 face/par value\n",
       "ytm   = 0.05  # 5% YTM\n",
       "\n",
-      "# Today\n",
+      "# Today:\n",
       "ytm   = 0.1  # 10% YTM\n",
       "r     = ytm/2\n",
       "n     = 3*2\n",
