hw5: solutions - cleanup

--- a/hw5.ipynb
+++ b/hw5.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c212f464a3409cf915ac9a92288f283038066583812da58dc18c41c7f8cb6628"
+  "signature": "sha256:b0dd147aadaade23adef14c5cb15cbae62ba59a6fd9a3c8eeef75cdce687cc20"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -362,7 +362,7 @@
       "ytm   = 0.1  # 10% YTM\n",
       "r     = ytm/2\n",
       "n     = 3*2\n",
-      "post  = fi.fv(c,n,r=0.03) # Postponed coupons @ r=3%\n",
+      "post  = fi.fv(c,n,r=0.03/2) # Postponed coupons @ r=3%\n",
       "price = fi.pv(0,n,r,fv=post+face)\n",
       "\n",
       "ans.add(fi.rnd(price))"
@@ -375,7 +375,7 @@
        "output_type": "pyout",
        "prompt_number": 11,
        "text": [
-        "382761"
+        "382405"
        ]
       }
      ],
@@ -403,7 +403,7 @@
         " 7. Bond A\n",
         " 8. 250\n",
         " 9. 1500000\n",
-        "10. 382761\n"
+        "10. 382405\n"
        ]
       }
      ],
